Version 0.5.0:
	New features:
	- When compiling with a C++11 compatible compiler, libsigc++ and pthread
	  support is no longer required. This does require that all packages built
	  against libt3widget are also built in C++11 mode. As recent versions
	  libsigc++ also require this, depending on libsigc++ does not prevent this
	  issue.

	Bug fixes:
	- Fix setting of visible part of the text in the text_field_t when changing
	  the contents using set_text.
	- Fix re-activating an already active popup. Re-activating the currently
	  active popup would cause the popup to be hidden.
	- Fix a segmentation fault when dragging the selection beyond the top of
	  the text area.

Version 0.4.7:
	Bug fixes:
	- Fix crashes due to invisible widgets getting activated through hotkeys.
	- Fix read of uninitialized value.
	- Fix memory leaks in edit widget undo/redo.

Version 0.4.6:
	Bug fixes:
	- Fix movement of cursor after mouse positioning.
	- Fix crash when clicking below the entered text in wrap mode.
	- Fix sanitizing of directory names, which would start at a random point,
	  instead of at the start of the string.

Version 0.4.5:
	Bug fixes:
	- Fix movement of cursor after inserting a tab.
	- Fix movement of cursor on pressing left or right when text is selected.
	- Don't allow pasting of values with filtered characters in text fields.

Version 0.4.4:
	Bug fixes:
	- Remove superfluous / characters from directory names in the file dialog,
	  which prevented .. from working correctly.
	- Fix incorrect value types in return statements in widget_group::is_hotkey.
	- Correctly set the time member in the SelectionNotify events sent for
	  X11 clipboard conversions. This fixes hangs when pasting in other clients.

Version 0.4.3:
	Bug fixes:
	- Don't erase the last line of wrapped text in the edit window.

Version 0.4.2:
	Bug fixes:
	- Allow scroll wheel to function on scrollbar again.
	- Do not (un)indent the bottom line of the selection if the selection starts