@@ -1,4 +1,4 @@
-#CPP11 := 1
+CPP11 := 1
 ifeq (1, $(CPP11))
 $(warning $(shell echo -e '\x1b[35;1mBUILDING WITH EXPERIMENTAL C++11 SIGNAL SUPPORT\x1b[0m'))
 endif
