@@ -116,6 +116,9 @@ enum {
 	EKEY_UPDATE_TERMINAL,
 	/** Key symbol indicating that there is a new #mouse_event_t available in the mouse events queue. */
 	EKEY_MOUSE_EVENT,
+	/** Key symbol indicating that the async_safe_exit_main_loop function was called. */
+	EKEY_EXIT_MAIN_LOOP,
+	// Next value should be EKEY_EXIT_MAIN_LOOP + 256
 
 	/** Symbolic name for the escape key. */
 	EKEY_ESC = 27,
